--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
 	<section id="home">TDoH Conf 2016</section>
 
 	<section id="program">
-		<div class="titlebox">
-			<h2 class="sfont">Map icon</h2>
-			<h2 class="gfont">活動地圖</h2>
-		</div>
+		<h2 class="sfont bigtitle">Schedule</h2>
 		<div class="timetable">
 			<div id="mfp-popup-program" class="white-popup mfp-with-anim mfp-hide">
 				<div class="avator"></div>
