--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body>
 
-	<img role="cover-background-image" src="images/background.jpg" />
+	<img role="cover-background-image" src="images/background.png" />
 
 	<header>
 		<nav class="navbar navbar-default">
