--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 	<meta property="twitter:image:height" content="">
 	<!--favicon-->
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
+	<!-- <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 	<link href="Magnific-Popup/magnific-popup.css" rel="stylesheet">
 	<link href="stylesheet.css" rel="stylesheet">
@@ -48,7 +47,9 @@
 		<div class="blank" id="top"></div>
 	</header>
 
-	<section id="home">TDoH Conf 2016</section>
+	<section id="home">
+		<h2 class="sfont">TDoH Conf 2016</h2>
+	</section>
 
 	<section id="program">
 		<h2 class="sfont bigtitle">Schedule</h2>
