--- a/index.html
+++ b/index.html
@@ -34,16 +34,25 @@
 	<img role="cover-background-image" src="images/background.png" />
 
 	<header>
-		<nav class="navbar navbar-default">
-			<ul class="nav nav-pills">
-			  <li role="presentation"><a class="btn gray text-large animate" href="#top">首頁</a></li>
-			  <li role="presentation"><a class="btn gray text-large animate" href="#program">議程</a></li>
-			  <li role="presentation"><a class="btn gray text-large animate" href="#transport">交通資訊</a></li>
-			  <li role="presentation"><a class="btn gray text-large animate" href="#call_for_paper">徵稿資訊</a></li>
-			  <li role="presentation"><a class="btn gray text-large animate" href="#sponsor">研討會贊助</a></li>
-			  <li role="presentation"><a class="btn gray text-large animate" href="#staff">籌備團隊</a></li>
-			</ul>
-		</nav>
+		<div class="navbar">
+			<h1 class="main-title"><a class="sfont" href="">TDOHacker</a></h1>
+			<nav role="bugar-button" class="unactive">
+				<li role="bugar-top-bread"></li>
+				<li role="bugar-ham"></li>
+				<li role="bugar-btn-bread"></li>
+			</nav>
+			<div class="nav">
+				<ul>
+					<li role="presentation"><a class="btn gray text-large animate" href="#top">首頁</a></li>
+					<li role="presentation"><a class="btn gray text-large animate" href="#program">議程</a></li>
+					<li role="presentation"><a class="btn gray text-large animate" href="#transport">交通資訊</a></li>
+					<li role="presentation"><a class="btn gray text-large animate" href="#call_for_paper">徵稿資訊</a></li>
+					<li role="presentation"><a class="btn gray text-large animate" href="#sponsor">研討會贊助</a></li>
+					<li role="presentation"><a class="btn gray text-large animate" href="#staff">籌備團隊</a></li>
+				</ul>
+			</div>
+			<div class="fix"></div>
+		</div>
 		<div class="blank" id="top"></div>
 	</header>
 
@@ -121,12 +130,82 @@
 				</tbody>
 			</table>
 		</div>
+		<div class="timetable-mobile">
+			<div id="mfp-popup-program" class="white-popup mfp-with-anim mfp-hide">
+				<div class="avator"></div>
+				<div class="data">
+					<div class="title">主題</div>
+					<div class="data-title"></div>
+					<div class="title">內容大綱</div>
+					<div class="data-description"></div>
+					<div class="title">講者介紹</div>
+					<div class="data-speaker"></div>
+				</div>
+			</div>
+			<table>
+				<tbody>
+					<tr>
+						<th role="time-col" class="sfont">12/17</th>
+					</tr>
+					<tr>
+						<td role="time-col" class="sfont">09:15 ~ 09:30</td>
+					</tr>
+					<tr>
+						<td>Opening</td>
+					</tr>
+					<tr>
+						<td role="time-col" class="sfont">&nbsp;</td>
+					</tr>
+					<tr>
+						<td class="link" href="#mfp-popup-program">
+							<div class="place">Keynote</div>
+							<div class="avatar"><img src="images/logo.png" /></div>
+							<div class="data">
+								<div class="title">Program A</div>
+								<div class="description hide">
+									<p><b><a href="/wiki/NBA%E5%8E%86%E5%B1%8A%E5%BE%97%E5%88%86%E7%8E%8B" title="NBA歷屆得分王">NBA歷屆得分王</a></b>：根據<a href="/wiki/%E7%AF%AE%E7%90%83" title="籃球">籃球</a>比賽規則，球隊可以通過球員投籃和<a href="/wiki/%E7%BD%9A%E7%90%83_(%E7%AF%AE%E7%90%83)" title="罰球 (籃球)">罰球</a><a href="/wiki/%E5%BE%97%E5%88%86_(%E7%AF%AE%E7%90%83)" title="得分 (籃球)">得分</a>，最終得分高的球隊贏得比賽。<b><span lang="en" xml:lang="en"><a href="/wiki/NBA" title="NBA">NBA</a></span>得分王</b>是指每個<span lang="en" xml:lang="en">NBA</span>賽季平均每場比賽得分最多的球員。<a href="/wiki/1968-69_NBA%E8%B5%9B%E5%AD%A3" title="1968-69 NBA賽季">1968-69年賽季</a>前，得分王都是全季得分最多的球員，之後再改為平均每場比賽得分最多的球員。另外，由於三分球是在<a href="/wiki/1979-80_NBA%E8%B5%9B%E5%AD%A3" title="1979-80 NBA賽季">1979-80年賽季</a>首次引入，所以此前的得分王沒有三分球數據。從<a href="/wiki/1974-75_NBA%E8%B5%9B%E5%AD%A3" title="1974-75 NBA賽季">1974-75年賽季</a>開始，爭奪得分王頭銜的球員在相應賽季要參加全部82場比賽中的至少70場，或是得分不低於1400。<a href="/wiki/%E5%A8%81%E5%B0%94%E7%89%B9%C2%B7%E5%BC%A0%E4%BC%AF%E4%BC%A6" title="威爾特·張伯倫">威爾特·張伯倫</a>在<a href="/wiki/1961-62_NBA%E8%B3%BD%E5%AD%A3" title="1961-62 NBA賽季">1961–62年賽事</a>共獲得4029分，場均得分50.4，兩項都創下歷史紀錄並保持至今。他在<a href="/wiki/1959-60_NBA%E8%B5%9B%E5%AD%A3" title="1959-60 NBA賽季">1959–60年賽季</a>平均每場比賽得到37.6分，至今保持著新手球員的最高紀錄。<a href="/wiki/%E5%87%AF%E6%96%87%C2%B7%E6%9D%9C%E5%85%B0%E7%89%B9" title="凱文·杜蘭特">凱文·杜蘭特</a>在<a href="/wiki/2013-14_NBA%E8%B3%BD%E5%AD%A3" title="2013-14 NBA賽季">2013–14賽季</a>共得到2593分，平均每場比賽32分，是現役球員中的得分王。<a href="/wiki/%E8%BF%88%E5%85%8B%E5%B0%94%C2%B7%E4%B9%94%E4%B8%B9" title="麥可·喬丹">麥可·喬丹</a>共有十次獲得分王稱號，比其他球員都多。喬丹和張伯倫均曾連續七次獲得分王頭銜，是連莊次數最多的球員（張伯倫一共也是七次獲得分王稱號）。<a href="/wiki/%E4%B9%94%E6%B2%BB%C2%B7%E6%A0%BC%E6%B8%A9" title="喬治·格溫">喬治·格溫</a>、<a href="/wiki/%E8%89%BE%E4%BC%A6%C2%B7%E8%89%BE%E4%BD%9B%E6%A3%AE" class="mw-redirect" title="艾倫·艾佛森">艾倫·艾佛森</a>和<a href="/wiki/%E5%87%AF%E6%96%87%C2%B7%E6%9D%9C%E5%85%B0%E7%89%B9" title="凱文·杜蘭特">凱文·杜蘭特</a>都曾四次當選得分王，<a href="/wiki/%E4%B9%94%E6%B2%BB%C2%B7%E8%BF%88%E8%82%AF" title="喬治·邁肯">喬治·邁肯</a>、<a href="/wiki/%E5%B0%BC%E5%B0%94%C2%B7%E7%BA%A6%E7%BF%B0%E6%96%AF%E9%A1%BF" title="尼爾·約翰斯頓">尼爾·約翰斯頓</a>和<a href="/wiki/%E9%AE%91%E4%BC%AF%C2%B7%E9%BA%A5%E5%8D%A1%E6%9D%9C" title="鮑伯·麥卡杜">鮑伯·麥卡杜</a>各有三次。<a href="/wiki/%E4%BF%9D%E7%BD%97%C2%B7%E9%98%BF%E9%87%8C%E9%87%91" title="保羅·阿里金">保羅·阿里金</a>、<a href="/wiki/%E9%B2%8D%E5%8B%83%C2%B7%E4%BD%A9%E8%92%82%E7%89%B9" title="鮑勃·佩蒂特">鮑勃·佩蒂特</a>、<a href="/wiki/%E5%8D%A1%E9%87%8C%E5%A7%86%C2%B7%E9%98%BF%E5%8D%9C%E6%9D%9C%E5%8B%92-%E8%B4%BE%E5%B7%B4%E5%B0%94" title="卡里姆·阿卜杜勒-賈巴爾">卡里姆·阿卜杜勒-賈巴爾</a>、<a href="/wiki/%E6%B2%99%E5%A5%8E%E5%B0%94%C2%B7%E5%A5%A5%E5%B0%BC%E5%B0%94" title="沙奎爾·奧尼爾">沙奎爾·奧尼爾</a>、<a href="/wiki/%E7%89%B9%E9%9B%B7%E8%A5%BF%C2%B7%E9%BA%A6%E6%A0%BC%E5%85%8B%E9%9B%B7%E8%BF%AA" title="特雷西·麥格克雷迪">特雷西·麥格克雷迪</a>和<a href="/wiki/%E7%A7%91%E6%AF%94%C2%B7%E5%B8%83%E8%8E%B1%E6%81%A9%E7%89%B9" title="科比·布萊恩特">科比·布萊恩特</a>都曾兩度當選得分王。歷史上共有五位球員在同一賽季拿下得分王頭銜的同時還帶領球隊贏得<a href="/wiki/NBA%E6%80%BB%E5%86%A0%E5%86%9B%E5%88%97%E8%A1%A8" class="mw-redirect" title="NBA總冠軍列表">總冠軍</a>，分別是<a href="/wiki/%E4%B9%94%C2%B7%E7%A6%8F%E5%B0%94%E5%85%8B%E6%96%AF" title="喬·福爾克斯">喬·福爾克斯</a>於<a href="/wiki/1947%E5%B9%B4BAA%E7%B8%BD%E6%B1%BA%E8%B3%BD" class="mw-redirect" title="1947年BAA總決賽">1947年</a>帶領<a href="/wiki/%E9%87%91%E5%B7%9E%E5%8B%87%E5%A3%AB" title="金州勇士">費城勇士</a>打入決賽、邁肯於1949和1950年率領<a href="/wiki/%E6%B4%9B%E6%9D%89%E7%9F%B6%E6%B9%96%E4%BA%BA" title="洛杉磯湖人">洛杉磯湖人</a>進入決賽，阿卜杜勒-賈巴爾於1971年同<a href="/wiki/%E5%AF%86%E5%B0%94%E6%B2%83%E5%9F%BA%E9%9B%84%E9%B9%BF" title="密爾沃基雄鹿">密爾沃基雄鹿</a>打進決賽，喬丹於<a href="/wiki/1991%E5%B9%B4NBA%E7%B8%BD%E6%B1%BA%E8%B3%BD" title="1991年NBA總決賽">1991</a>至<a href="/wiki/1993%E5%B9%B4NBA%E7%B8%BD%E6%B1%BA%E8%B3%BD" title="1993年NBA總決賽">1993年</a>和<a href="/wiki/1996%E5%B9%B4NBA%E6%80%BB%E5%86%B3%E8%B5%9B" class="mw-redirect" title="1996年NBA總決賽">1996</a>至<a href="/wiki/1998%E5%B9%B4NBA%E6%80%BB%E5%86%B3%E8%B5%9B" class="mw-redirect" title="1998年NBA總決賽">1998年</a>率<a href="/wiki/%E8%8A%9D%E5%8A%A0%E5%93%A5%E5%85%AC%E7%89%9B" title="芝加哥公牛">芝加哥公牛</a>衝進決賽，奧尼爾於2000年帶領<a href="/wiki/%E6%B4%9B%E6%9D%89%E7%9F%B6%E6%B9%96%E4%BA%BA" title="洛杉磯湖人">洛杉磯湖人</a>進入決賽。自引入三分球制以來，只有奧尼爾在拿下得分王的賽季沒有投進過三分球。杜蘭特在<a href="/wiki/2009-10_NBA%E8%B5%9B%E5%AD%A3" title="2009-10 NBA賽季">2009-10年賽季</a>平均每場得到30.1分，獲得分王頭銜時還只出生21年197天，是<span lang="en" xml:lang="en">NBA</span>歷史上最年輕的得分王。<a href="/wiki/%E6%96%AF%E8%92%82%E8%8A%AC%C2%B7%E7%A7%91%E9%87%8C" title="史蒂芬·科里">史蒂芬·科里</a>是最新一任得分王，在<a href="/wiki/2015-16_NBA%E8%B5%9B%E5%AD%A3" title="2015-16 NBA賽季">2015–16年賽季</a>場均得分同樣是30.1，這也是他職業生涯至今的最好成績。</p>
+								</div>
+								<div class="speaker">Speaker A</div>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td role="time-col" class="sfont">&nbsp;</td>
+					</tr>
+					<tr>
+						<td class="link" href="#mfp-popup-program">
+							<div class="place">R1</div>
+							<div class="avatar"><img src="images/logo.png" /></div>
+							<div class="data">
+								<div class="title">Program B</div>
+								<div class="description hide"></div>
+								<div class="speaker">Speaker B</div>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td role="time-col" class="sfont">&nbsp;</td>
+					</tr>
+					<tr>
+						<td class="link" href="#mfp-popup-program">
+							<div class="place">R3</div>
+							<div class="avatar"><img src="images/logo.png" /></div>
+							<div class="data">
+								<div class="title">Program C</div>
+								<div class="description hide"></div>
+								<div class="speaker">Speaker C</div>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</section>
 
 	<section id="transport">
 		<h2 class="sfont bigtitle">Transport Information</h2>
 		<div class="map">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1819.885906621016!2d120.64789003302712!3d24.179734196491925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346916235e49b5c7%3A0x2aad2c0bafb3f94b!2zNDA35Y-w5Lit5biC6KW_5bGv5Y2A5Lq66KiA5aSn5qiT!5e0!3m2!1szh-TW!2stw!4v1471798758429" width="1000" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1819.885906621016!2d120.64789003302712!3d24.179734196491925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346916235e49b5c7%3A0x2aad2c0bafb3f94b!2zNDA35Y-w5Lit5biC6KW_5bGv5Y2A5Lq66KiA5aSn5qiT!5e0!3m2!1szh-TW!2stw!4v1471798758429" width="800" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 	</section>
 
