--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 	<meta property="twitter:image:height" content="">
 	<!--favicon-->
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<!-- <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 	<link href="Magnific-Popup/magnific-popup.css" rel="stylesheet">
@@ -158,7 +157,6 @@
 					</tr>
 					<tr>
 						<td class="link" href="#mfp-popup-program">
-							<div class="place">Keynote</div>
 							<div class="avatar"><img src="images/logo.png" /></div>
 							<div class="data">
 								<div class="title">Program A</div>
@@ -167,6 +165,7 @@
 								</div>
 								<div class="speaker">Speaker A</div>
 							</div>
+							<div class="place">Keynote</div>
 						</td>
 					</tr>
 					<tr>
@@ -174,13 +173,13 @@
 					</tr>
 					<tr>
 						<td class="link" href="#mfp-popup-program">
-							<div class="place">R1</div>
 							<div class="avatar"><img src="images/logo.png" /></div>
 							<div class="data">
 								<div class="title">Program B</div>
 								<div class="description hide"></div>
 								<div class="speaker">Speaker B</div>
 							</div>
+							<div class="place">R1</div>
 						</td>
 					</tr>
 					<tr>
@@ -188,13 +187,13 @@
 					</tr>
 					<tr>
 						<td class="link" href="#mfp-popup-program">
-							<div class="place">R3</div>
 							<div class="avatar"><img src="images/logo.png" /></div>
 							<div class="data">
 								<div class="title">Program C</div>
 								<div class="description hide"></div>
 								<div class="speaker">Speaker C</div>
 							</div>
+							<div class="place">R3</div>
 						</td>
 					</tr>
 				</tbody>
@@ -275,6 +274,14 @@
 			</div>
 		</div>
 	</section>
+
+	<footer>
+		<section class="icons">
+			<a href="http://tdohacker.org/" target="_blank"><img src="images/ic_blog.png" /></a>
+			<a href="https://www.facebook.com/tdohacker" target="_blank"><img src="images/ic_facebook.png" /></a>
+		</section>
+		<section class="copyright sfont">Copyright &copy; TDOHacker</section>
+	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
