--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
 	</header>
 
 	<section id="home">
+		<div class="logo"><img src="images/big-logo.png" /></div>
+		<div class="logo-title-top"></div>
 		<h2 class="sfont">TDoH Conf 2016</h2>
+		<div class="logo-title-btm"></div>
 	</section>
 
 	<section id="program">
