--- a/index.html
+++ b/index.html
@@ -249,31 +249,85 @@
 		<div class="content">
 			<h3 class="position">總召</h3>
 			<div class="row">
-				<div class="avator" title="TDOH"><img src="images/logo.png" /></div>
+				<div class="avator" title="Hrj"><img src="images/image13.jpg" /></div>
+				<div class="avator" title="jyny"><img src="images/image28.jpg" /></div>
 			</div>
 			<div class="spacing"></div>
 			<h3 class="position">行政組</h3>
 			<div class="row">
-				<div class="avator"></div>
-				<div class="avator"></div>
-				<div class="avator"></div>
-				<div class="avator"></div>
+				<div class="avator" title="Syu"><img src="images/image25.jpg" /></div>
+				<div class="avator" title="jhe"><img src="images/image14.jpg" /></div>
+				<div class="avator" title="嘖嘖"><img src="images/image10.jpg" /></div>
+				<div class="avator" title="ShenXD"><img src="images/image04.png" /></div>
 			</div>
 			<div class="spacing"></div>
 			<h3 class="position">場務組</h3>
 			<div class="row">
-				<div class="avator"></div>
-				<div class="avator"></div>
-				<div class="avator"></div>
-				<div class="avator"></div>
-				<div class="avator"></div>
-				<div class="avator"></div>
-				<div class="avator"></div>
-				<div class="avator"></div>
-				<div class="avator"></div>
-				<div class="avator"></div>
-				<div class="avator"></div>
-				<div class="avator"></div>
+				<div class="avator" title="DreamerXu"><img src="images/image08.jpg" /></div>
+				<div class="avator" title="密語"><img src="images/image26.jpg" /></div>
+				<div class="avator" title="阿星"><img src="images/image06.jpg" /></div>
+				<div class="avator" title="AZ"><img src="images/image01.jpg" /></div>
+				<div class="avator" title="揪凱"><img src="images/image05.png" /></div>
+				<div class="avator" title="海豹"><img src="images/image19.png" /></div>
+				<div class="avator" title="Yexina"><img src="images/image20.png" /></div>
+				<div class="avator" title="Bruce"><img src="images/logo.png" /></div>
+				<div class="avator" title="莫風"><img src="images/logo.png" /></div>
+				<div class="avator" title="全全"><img src="images/logo.png" /></div>
+				<div class="avator" title="蝦子"><img src="images/logo.png" /></div>
+				<div class="avator" title="小耕"><img src="images/logo.png" /></div>
+				<div class="avator" title="Bogi"><img src="images/logo.png" /></div>
+				<div class="avator" title="Akin"><img src="images/logo.png" /></div>
+				<div class="avator" title="ws育慈"><img src="images/image00.jpg" /></div>
+				<div class="avator" title="阿貓"><img src="images/image02.png" /></div>
+				<div class="avator" title="Akin"><img src="images/logo.png" /></div>
+			</div>
+			<div class="spacing"></div>
+			<h3 class="position">議程組</h3>
+			<div class="row">
+				<div class="avator" title="Jeffrey Lin"><img src="images/logo.png" /></div>
+				<div class="avator" title="Anna"><img src="images/logo.png" /></div>
+				<div class="avator" title="adr"><img src="images/image22.jpg" /></div>
+				<div class="avator" title="綠茶"><img src="images/image21.jpg" /></div>
+				<div class="avator" title="Allen Chou"><img src="images/logo.png" /></div>
+				<div class="avator" title="Doremi"><img src="images/logo.png" /></div>Gent
+				<div class="avator" title="Gent"><img src="images/logo.png" /></div>
+			</div>
+			<div class="spacing"></div>
+			<h3 class="position">餐飲組</h3>
+			<div class="row">
+				<div class="avator" title="Snake"><img src="images/image27.jpg" /></div>
+				<div class="avator" title="Trista"><img src="images/logo.png" /></div>
+				<div class="avator" title="PCC"><img src="images/logo.png" /></div>
+				<div class="avator" title="一六"><img src="images/logo.png" /></div>
+				<div class="avator" title="PN Wu (小平)"><img src="images/image03.png" /></div>
+			</div>
+			<div class="spacing"></div>
+			<h3 class="position">財務組</h3>
+			<div class="row">
+				<div class="avator" title="腦腦"><img src="images/image18.jpg" /></div>
+				<div class="avator" title="鈞鈞"><img src="images/image09.jpg" /></div>
+				<div class="avator" title="Domino"><img src="images/image16.jpg" /></div>
+				<div class="avator" title="阿良"><img src="images/image29.jpg" /></div>
+			</div>
+			<div class="spacing"></div>
+			<h3 class="position">紀錄組</h3>
+			<div class="row">
+				<div class="avator" title="Hiram"><img src="images/image24.jpg" /></div>
+				<div class="avator" title="Deimos"><img src="images/image17.jpg" /></div>
+				<div class="avator" title="cras4202tw"><img src="images/image07.jpg" /></div>
+			</div>
+			<div class="spacing"></div>
+			<h3 class="position">公關組</h3>
+			<div class="row">
+				<div class="avator" title="Sues"><img src="images/image15.png" /></div>
+				<div class="avator" title="小葉"><img src="images/logo.png" /></div>
+				<div class="avator" title="多多"><img src="images/logo.png" /></div>
+				<div class="avator" title="summer"><img src="images/logo.png" /></div>
+			</div>
+			<div class="spacing"></div>
+			<h3 class="position">形象組</h3>
+			<div class="row">
+				<div class="avator" title="小趴"><img src="images/logo.png" /></div>
 			</div>
 		</div>
 	</section>
