--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 				<div class="avator" title="adr"><img src="images/image22.jpg" /></div>
 				<div class="avator" title="綠茶"><img src="images/image21.jpg" /></div>
 				<div class="avator" title="Allen Chou"><img src="images/logo.png" /></div>
-				<div class="avator" title="Doremi"><img src="images/logo.png" /></div>Gent
+				<div class="avator" title="Doremi"><img src="images/logo.png" /></div>
 				<div class="avator" title="Gent"><img src="images/logo.png" /></div>
 			</div>
 			<div class="spacing"></div>
