--- a/index.html
+++ b/index.html
@@ -502,6 +502,64 @@
 	<section id="call_for_paper">
 		<h2 class="sfont bigtitle">Call for Paper</h2>
 		<div class="content">
+			<h3>Underground Hacking——駭客地下城</h3>
+			<p class="message">大駭客時代過了嗎？技術頂尖佼佼者想私下傳承技術找徒弟、任何趣事想公布世人、傳承後輩的經驗⋯⋯！擺脫以往年會單方面輸出知識的框架，讓講者有好的環境與觀眾互動，傳承技術、精神，找到你夢想中的師父、值得信賴的徒弟。</p>
+			<p class="message">敬邀有真駭客精神的您一同來分享經驗，打破既往單方面輸出知識的議程、讓講者與聽眾真正交流思考。<br />年度主題 —— 駭客地下城（Underground Hacking），舉凡校園資安、資訊安全相關技術或研究、CTF 競賽經驗、社群參與或資訊安全相關經驗等各式題材皆歡迎您與我們一同分享；除上述所提及之類型外，其他資訊安全相關題材亦均可自由投稿。</p>
+			<p class="message strong">內容須基於資訊安全技術，可以是 Coding 技巧、工具使用、經驗傳承、亦或找尋同樣想法與點子的人一同創業。</p>
+			<h3>徵稿條件與徵稿需求</h3>
+			<ol>
+				<li>TDOH Conf 之議程分為以下方案，講師需在投稿時一併決定議題講授時間
+					<ul>
+						<li>啟垣廳（400人演講廳）
+							<ul>
+								<li>50 分鐘稿件</li>
+								<li>限投技術類型稿件</li>
+							</ul>
+						</li>
+						<li>孟焱廳（100人演講廳）
+							<ol type="a">
+								<li>方案一
+									<ul>
+										<li>50 分鐘稿件</li>
+										<li>類型：工具教學/技術傳承、近距離互動 稿件</li>
+									</ul>
+								</li>
+								<li>方案二
+									<ul>
+										<li>50 分鐘稿件</li>
+										<li>類型：有趣產品推銷/開源專案找夥伴/工作機會/任意類型創意發想</li>
+									</ul>
+								</li>
+							</ol>
+						</li>
+						<li>熾燿廳（30 人演講廳）
+							<ul>
+								<li>時間約 30 至 50 分鐘皆可（不特別拘束）但須與 TDOH Conf 籌備團隊於 2016 年 10 月 31 日前溝通完畢舉辦形式、細節與時間長度等詳細內容</li>
+								<li>類型：任何資安相關競賽或者活動</li>
+							</ul>
+						</li>
+						<li>全廳聯播
+							<ul>
+								<li>20 分鐘稿件</li>
+								<li>類型：short talk</li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+				<li>講師福利（每堂議程僅提供一名講師福利）：
+					<ul>
+						<li>五十分鐘類型稿件皆提供講師住宿一天</li>
+						<li>TDOH Conf 門票一張</li>
+						<li>受邀 TDOH Conf 逢甲夜遊晚宴</li>
+					</ul>
+				</li>
+			</ol>
+		</div>
+	</section>
+
+	<section id="provide">
+		<h2 class="sfont bigtitle">講師條款與規定說明</h2>
+		<div class="content">
 			<h3>投稿 TDOH Conf 講師知悉並接受以下條款及規定：</h3>
 			<ol>
 				<li>議程於 TDOH Conf 發表時，同意 TDOH Conf 大會錄影、重製、散布及廣告用途，並且可於議程籌備過程藉由網站、電子郵件、平面媒體或其他媒體公布議程資訊、素材與影音等資料。</li>
@@ -546,6 +604,19 @@
 					</ul>
 				</li>
 			</ol>
+		</div>
+	</section>
+
+	<section id="personal">
+		<h2 class="sfont bigtitle">個資保護</h2>
+		<div class="content">
+			<h3>The Declaration of hacker -(資訊及通訊傳播業)「個人資料保護法」公開聲明內容</h3>
+			<p class="message">歡迎使用 The Declaration of hacker（以下稱本單位）相關服務，依據個人資料保護法（以下稱個資法）第八條第一項規定，為了確保使用者之個人資料、隱私及權益之保護，當您已閱讀並同意「The Declaration of hacker單位個人資料保護法告知內容」時，即表示您願意以電子文件之方式行使法律所賦予同意之權利，並具有書面同意之效果，若不同意請離開此網頁，如需服務請洽本單位之服務人員。 (以下為本單位依「個人資料保護法」規定，必須向您告知的各項聲明，請您務必詳閱。)</p>
+			<p class="message">一、 個人資料蒐集目的： （一）從事資訊、通訊傳播、出版、影片服務、聲音錄製、音樂出版、傳播、節目播送、電信、電腦系統設計、資料處理及資訊供應服務等之行為均屬於本行業之個資蒐集目的。 （二）上述之相關業務或其他符合營業項目所定義之工作範圍。</p>
+			<p class="message">二、 個人資料蒐集類別： （一）識別類（例如：中、英文姓名、國民身分證統一編號、識別碼、學生或員工證號、聯絡電話號碼、地址、性別、出生地、電子郵遞地址、帳戶號碼與戶名、其它識別證號或電子識別標章）、特徵類（例如：出生年月日、國籍、個人照片、筆跡與紙本文件）、社會情況類（例如：職業、學經歷）、財務細節類（例如：銀行帳號、戶名或與本蒐集目的相關之財務資訊）等。</p>
+			<p class="message">三、 個人資料利用之期間、地區、對象及方式： （一）期間：利用期間為本單位或業務所必須之保存期間。 （二）地區：您的個人資料將用於本單位提供服務之地區。 （三）對象：本單位之共同行銷、交互運用客戶資料公司、合作推廣單位、業務往來機構、依法有調查權機關或金融監理機關。 （四）方式：電子文件、紙本，或以自動化機器或其他非自動化之利用方式。</p>
+			<p class="message">四、 依據個資法第三條規定，您就本單位保有您的個人資料得行使下列權利： （一）查詢、閱覽、複本、補充、更正、請求停止蒐集、請求停止處理、請求停止利用、請求刪除等權利。</p>
+			<p class="message">The Declaration of hacker保有修訂本告知內容之權利，修正時亦同，以上條文參考自中華民國資料保護協會。 公告日期: 2016-9-1 聯絡信箱:cfp@tdohacker.org</p>
 		</div>
 	</section>
 
