--- a/index.html
+++ b/index.html
@@ -854,14 +854,33 @@
 						</li>
 					</ul>
 				</li>
-				<li>講師福利（每堂議程僅提供一名講師福利）：
+				<li>投稿內容類別
 					<ul>
-						<li>五十分鐘類型稿件皆提供講師住宿一天</li>
-						<li>TDOH Conf 門票一張</li>
-						<li>受邀 TDOH Conf 逢甲夜遊晚宴</li>
+						<li>技術類別（50 分鐘）
+							<blockquote>好技術就要跟好朋友分享！最近不小心在路邊踢到好多好技術不知道該分享到哪嗎？當然要投稿來 TDOH Conf 呀！技術類別投稿歡迎您投稿任何技術類型資安稿件，各式新興攻擊與應對的防禦、對舊有攻擊防禦方式深入探討與延伸應用方式、特定攻擊模式防禦的分析與探討等。具體如「深入分析 FIDO U2F 運作模式與潛在風險」、「細談 LTE 的安全性問題」、「Zigbee 協定的封包攔截與拆解」等，都適合投稿在「技術類別」分類下。</blockquote>
+						</li>
+						<li>工具類別（30 或 50 分鐘）
+							<blockquote>手邊太多工具放在身上背包欄不夠用了嗎？那就快把工具分享出來吧！只要是資安相關之工具使用、拆解、分析、製作、改編等題目，無論軟體、作業系統、硬體、開發板、各種器材及其他資安相關之內容皆可。具體如「如何將 Kali Linux 改的更友善」、「拆解 SQLMap 程式碼並分析其攻擊模式」、「使用 OpenLTE 架設偽造基地台」等，都適合投稿在「工具類別」分類下。</blockquote>
+						</li>
+						<li>社群類別（30 分鐘）
+							<blockquote>快來向聽眾們宣傳您的社群吧！不管你是學生社團，或是新成立的社群，都十分歡迎投稿喔！還在猶豫什麼，趕緊整理一下最近的成果，跟大家分享吧！具體如：「TDOHacker學生資安社群」、「TDOH 2016 工商」皆在「社群類別」分類下。</blockquote>
+						</li>
+						<li>傳承類別（30 或 50 分鐘）
+							<blockquote>你有經驗想要跟大家分享嗎？不論是技術上的經驗，亦或是活動經驗，甚至是法律經驗，都歡迎投稿跟大家分享喔。相信大家都可以從你的經驗學到東西，而你或許還可以找到有類似經驗的人，發現過去從來沒不知道的秘訣呢！具體如：「防毒軟體實作經驗談」、「第一次舉辦 CTF 經驗談」、「如何辦好大食團！」</blockquote>
+						</li>
+						<li>活動類別（30 或 50 分鐘）
+							<blockquote>受夠死板的演講授課議程了嗎？擺脫單方面技術輸出，TDOH Conf 的「活動類別」翻轉您既定印象，讓講師與會眾能有一個舒服互動與認識的空間。具體如：與會眾的小型 wargame 競賽、開鎖活動、Pwn 下主機等，任何資訊安全相關之活動皆可。</blockquote>
+						</li>
+						<li>爆卦類別（20 分鐘）
+							<blockquote>有什麼秘密好想說、留在心底怕內傷嗎？只要與資訊安全有關或者不為人知秘密、有趣的事或是許多廠商不願公開的真相都歡迎投稿在爆掛類，讓我們一起探討這個秘密；你說你向學校舉發一個漏洞卻被約去泡茶嗎？快來分享你的奇幻旅行。額外備註：此類型大會禁止會場內任何形式的紀錄行為，讓講師與聽眾有一個私密的談話空間。</blockquote>
+						</li>
 					</ul>
 				</li>
 			</ol>
+			<p>選擇好投稿內容類別、精神喊話、 Outline 與 Abstract，寄送至 cfp@tdohacker.org</p>
+			<hr />
+			<h3>備註事項</h3>
+			<p>精神喊話為 09:30 至 10:10 提供各講者 3 至 5 分鐘時間自我推銷議程，亦或您有任何其他內心小秘密渴望宣洩吶喊、精神喊話也可（此項目為可選，不強制硬性要求）</p>
 		</div>
 	</section>
 
@@ -905,13 +924,34 @@
 					</ul>
 				</li>
 				<li>講師福利（每堂議程僅提供一名講師福利）：
-					<ul>
-						<li>五十分鐘類型稿件皆提供講師住宿一天</li>
-						<li>TDOH Conf 門票一張</li>
-						<li>受邀 TDOH Conf 逢甲夜遊晚宴</li>
-					</ul>
+					<ol type="i">
+						<li>400 人演講廳 50 分鐘議程講師：
+							<ul>
+								<li>補助 2000 新台幣</li>
+								<li>憑收據補助交通費用</li>
+								<li>住宿一晚</li>
+							</ul>
+						</li>
+						<li>100 人演講廳講師：
+							<ul>
+								<li>補助 2000 新台幣</li>
+								<li>憑收據補助交通費用</li>
+							</ul>
+						</li>
+						<li>50 人演講廳社群議程講師：
+							<ul>
+								<li>補助 1000 新台幣</li>
+							</ul>
+						</li>
+						<li>30 人演講廳：
+							<ul>
+								<li>開放舉辦任何資安相關比賽或者活動</li>
+							</ul>
+						</li>
+					</ol>
 				</li>
 			</ol>
+			<p>講師不分類型皆獲 TDOH Conf 門票一張並受邀 TDOH Conf 逢甲夜遊晚宴</p>
 		</div>
 	</section>
 
