--- a/index.html
+++ b/index.html
@@ -879,8 +879,17 @@
 			</ol>
 			<p>選擇好投稿內容類別、精神喊話、 Outline 與 Abstract，寄送至 cfp@tdohacker.org</p>
 			<hr />
+			<h3>信件格式範例</h3>
+				<ul>
+					<li>姓名：</li>
+					<li>聯絡電話：</li>
+					<li>精神喊話：</li>
+					<li>Outline：(可用以下格式之文件檔提供： .pdf、.doc、.docx、.key、.ppt、.pptx、.page )</li>
+					<li>Abstract：(可用以下格式之文件檔提供： .pdf、.doc、.docx、.key、.ppt、.pptx、.page )</li>
+				</ul>
+			<hr />
 			<h3>備註事項</h3>
-			<p>精神喊話為 09:30 至 10:10 提供各講者 3 至 5 分鐘時間自我推銷議程，亦或您有任何其他內心小秘密渴望宣洩吶喊、精神喊話也可（此項目為可選，不強制硬性要求）</p>
+			<p>精神喊話(講者自薦)為 09:30 至 09:50 提供各講者 3 至 5 分鐘時間自我推銷議程，亦或您有任何其他內心小秘密渴望宣洩吶喊、精神喊話也可（此項目為可選，不強制硬性要求）</p>
 		</div>
 	</section>
 
@@ -894,56 +903,28 @@
 				<li>TDOH Conf 於現場將準備一個投影機、一個投影幕、有線或無線網路及一個麥克風給予講師。講師需準備其他對於演講所需之器材，包含：筆記型電腦及其他演講所需設備。</li>
 				<li>TDOH Conf 保留更改原定議程時間的權利。如沒有任何可以適當安排的時候，TDOH Conf 能視現場之需要，於議程期間能更換講師場次及時間。</li>
 				<li>TDOH Conf 能不需要任何理由取消或更改任何已接受之議程稿件及決定。</li>
-				<li>請欲投稿 TDOH Conf 者於 2016 年 xx 月 yy 日前將稿件寄送至 cfp@tdohacker.org。提供稿件之議程資訊，俾利議程委員審核。請盡速投稿、先投稿者先審核，如已達本屆所需議程數，大會保留提前截稿之權利。</li>
-				<li>TDOH Conf 之議程分為以下方案，講師需在投稿時一併決定議題講授時間：
-					<ul>
-						<li>380 演講廳：
-							<ul>
-								<li>50 分鐘稿件（徵收四件）</li>
-								<li>限投技術類型稿件</li>
-							</ul>
-						</li>
-						<li>100 演講廳：
-							<ul>
-								<li>50 分鐘稿件（徵收兩件）</li>
-								<li>類型：工具教學/技術傳承、近距離互動稿件</li>
-							</ul>
-						</li>
-						<li>100 演講廳：
-							<ul>
-								<li>50 分鐘稿件（徵收兩件）</li>
-								<li>類型：有趣產品推銷/開源專案找夥伴/工作機會/任意類型 idea</li>
-							</ul>
-						</li>
-						<li>全廳聯播：
-							<ul>
-								<li>20 分鐘稿件（徵收兩件）</li>
-								<li>類型：short talk</li>
-							</ul>
-						</li>
-					</ul>
-				</li>
+				<li>請欲投稿 TDOH Conf 者於 2016 年 10 月 yy 日前將稿件寄送至 cfp@tdohacker.org。提供稿件之議程資訊，俾利議程委員審核。請盡速投稿、先投稿者先審核，如已達本屆所需議程數，大會保留提前截稿之權利。</li>
 				<li>講師福利（每堂議程僅提供一名講師福利）：
 					<ol type="i">
-						<li>400 人演講廳 50 分鐘議程講師：
+						<li>啟垣廳（400人演講廳） 50 分鐘議程講師：
 							<ul>
-								<li>補助 2000 新台幣</li>
+								<li>補助 新台幣 2000 整 </li>
 								<li>憑收據補助交通費用</li>
-								<li>住宿一晚</li>
+								<li>提供免費住宿一晚 (2016/12/16 晚上之住宿)</li>
 							</ul>
 						</li>
-						<li>100 人演講廳講師：
+						<li>孟焱廳（100人演講廳）講師：
 							<ul>
-								<li>補助 2000 新台幣</li>
+								<li>補助 新台幣 2000 整</li>
 								<li>憑收據補助交通費用</li>
 							</ul>
 						</li>
-						<li>50 人演講廳社群議程講師：
+						<li>青峰廳（100人演講廳）社群議程講師：
 							<ul>
-								<li>補助 1000 新台幣</li>
+								<li>補助 新台幣 1000 整</li>
 							</ul>
 						</li>
-						<li>30 人演講廳：
+						<li>熾燿廳（30 人演講廳）：
 							<ul>
 								<li>開放舉辦任何資安相關比賽或者活動</li>
 							</ul>
