--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
 				<li>TDOH Conf 於現場將準備一個投影機、一個投影幕、有線或無線網路及一個麥克風給予講師。講師需準備其他對於演講所需之器材，包含：筆記型電腦及其他演講所需設備。</li>
 				<li>TDOH Conf 保留更改原定議程時間的權利。如沒有任何可以適當安排的時候，TDOH Conf 能視現場之需要，於議程期間能更換講師場次及時間。</li>
 				<li>TDOH Conf 能不需要任何理由取消或更改任何已接受之議程稿件及決定。</li>
-				<li>請欲投稿 TDOH Conf 者於 2016 年 10 月 yy 日前將稿件寄送至 cfp@tdohacker.org。提供稿件之議程資訊，俾利議程委員審核。請盡速投稿、先投稿者先審核，如已達本屆所需議程數，大會保留提前截稿之權利。</li>
+				<li>請欲投稿 TDOH Conf 者於 2016 年 10 月 31 日前將稿件寄送至 cfp@tdohacker.org。提供稿件之議程資訊，俾利議程委員審核。請盡速投稿、先投稿者先審核，如已達本屆所需議程數，大會保留提前截稿之權利。</li>
 				<li>講師福利（每堂議程僅提供一名講師福利）：
 					<ol type="i">
 						<li>啟垣廳（400人演講廳） 50 分鐘議程講師：
@@ -919,7 +919,7 @@
 								<li>憑收據補助交通費用</li>
 							</ul>
 						</li>
-						<li>青峰廳（100人演講廳）社群議程講師：
+						<li>青峰廳（50人演講廳）社群議程講師：
 							<ul>
 								<li>補助 新台幣 1000 整</li>
 							</ul>
