--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width， initial-scale=1">
 	<title>TDOH Conf 2016</title>
-	<meta name="keywords" content="TDOH， TDOH2016， The Declaration of hacker Conference， 研討會， 社群， 駭客， Hacker">
+	<meta name="keywords" content="TDOH， TDOH2016， The Declaration of Hacker Conference， 研討會， 社群， 駭客， Hacker">
 	<meta name="description" content="TDOH Conf 2016， 12/17 逢甲大學人言大樓。">
 	<!--fb shareing-->
 	<meta property="og:title" content="2016 TDOH Conf">
@@ -23,6 +23,7 @@
 	<!--favicon-->
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 	<link href="Magnific-Popup/magnific-popup.css" rel="stylesheet">
 	<link href="stylesheet.css" rel="stylesheet">
@@ -58,7 +59,7 @@
 	<section id="home">
 		<div class="logo"><img src="images/big-logo.png" /></div>
 		<div class="logo-title-top"></div>
-		<h2 class="sfont">TDoH Conf 2016</h2>
+		<h2 class="sfont">TDOH Conf 2016</h2>
 		<div class="logo-title-btm"></div>
 	</section>
 
@@ -884,9 +885,10 @@
 					<li>姓名：</li>
 					<li>聯絡電話：</li>
 					<li>精神喊話：</li>
-					<li>Outline：(可用以下格式之文件檔提供： .pdf、.doc、.docx、.key、.ppt、.pptx、.page )</li>
-					<li>Abstract：(可用以下格式之文件檔提供： .pdf、.doc、.docx、.key、.ppt、.pptx、.page )</li>
+					<li>Outline：</li>
+					<li>Abstract：</li>
 				</ul>
+				<p>填寫完畢後寄信至 cfp@tdohacker.org，如有任何額外資料供審稿委員進一步理解您的稿件，可用以下格式之文件檔提供： .pdf、.doc、.docx、.key、.ppt、.pptx、.page</p>
 			<hr />
 			<h3>備註事項</h3>
 			<p>精神喊話(講者自薦)為 09:30 至 09:50 提供各講者 3 至 5 分鐘時間自我推銷議程，亦或您有任何其他內心小秘密渴望宣洩吶喊、精神喊話也可（此項目為可選，不強制硬性要求）</p>
@@ -939,13 +941,13 @@
 	<section id="personal">
 		<h2 class="sfont bigtitle">個資保護</h2>
 		<div class="content">
-			<h3>The Declaration of hacker -(資訊及通訊傳播業)「個人資料保護法」公開聲明內容</h3>
-			<p class="message">歡迎使用 The Declaration of hacker（以下稱本單位）相關服務，依據個人資料保護法（以下稱個資法）第八條第一項規定，為了確保使用者之個人資料、隱私及權益之保護，當您已閱讀並同意「The Declaration of hacker單位個人資料保護法告知內容」時，即表示您願意以電子文件之方式行使法律所賦予同意之權利，並具有書面同意之效果，若不同意請離開此網頁，如需服務請洽本單位之服務人員。 (以下為本單位依「個人資料保護法」規定，必須向您告知的各項聲明，請您務必詳閱。)</p>
-			<p class="message">一、 個人資料蒐集目的： （一）從事資訊、通訊傳播、出版、影片服務、聲音錄製、音樂出版、傳播、節目播送、電信、電腦系統設計、資料處理及資訊供應服務等之行為均屬於本行業之個資蒐集目的。 （二）上述之相關業務或其他符合營業項目所定義之工作範圍。</p>
-			<p class="message">二、 個人資料蒐集類別： （一）識別類（例如：中、英文姓名、國民身分證統一編號、識別碼、學生或員工證號、聯絡電話號碼、地址、性別、出生地、電子郵遞地址、帳戶號碼與戶名、其它識別證號或電子識別標章）、特徵類（例如：出生年月日、國籍、個人照片、筆跡與紙本文件）、社會情況類（例如：職業、學經歷）、財務細節類（例如：銀行帳號、戶名或與本蒐集目的相關之財務資訊）等。</p>
-			<p class="message">三、 個人資料利用之期間、地區、對象及方式： （一）期間：利用期間為本單位或業務所必須之保存期間。 （二）地區：您的個人資料將用於本單位提供服務之地區。 （三）對象：本單位之共同行銷、交互運用客戶資料公司、合作推廣單位、業務往來機構、依法有調查權機關或金融監理機關。 （四）方式：電子文件、紙本，或以自動化機器或其他非自動化之利用方式。</p>
-			<p class="message">四、 依據個資法第三條規定，您就本單位保有您的個人資料得行使下列權利： （一）查詢、閱覽、複本、補充、更正、請求停止蒐集、請求停止處理、請求停止利用、請求刪除等權利。</p>
-			<p class="message">The Declaration of hacker保有修訂本告知內容之權利，修正時亦同，以上條文參考自中華民國資料保護協會。 公告日期: 2016-9-1 聯絡信箱:cfp@tdohacker.org</p>
+			<h3>The Declaration of Hacker -(資訊及通訊傳播業)「個人資料保護法」公開聲明內容</h3>
+			<p class="message">歡迎使用 The Declaration of Hacker（以下稱本單位）相關服務，依據個人資料保護法（以下稱個資法）第八條第一項規定，為了確保使用者之個人資料、隱私及權益之保護，當您已閱讀並同意「The Declaration of Hacker單位個人資料保護法告知內容」時，即表示您願意以電子文件之方式行使法律所賦予同意之權利，並具有書面同意之效果，若不同意請離開此網頁，如需服務請洽本單位之服務人員。 (以下為本單位依「個人資料保護法」規定，必須向您告知的各項聲明，請您務必詳閱。) </p>
+			<p class="message">一、  個人資料蒐集目的：<br />&nbsp;&nbsp;&nbsp;&nbsp;（一）從事資訊、通訊傳播、出版、影片服務、聲音錄製、音樂出版、傳播、節目播送、電信、電腦系統設計、資料處理及資訊供應服務等之行為均屬於本行業之個資蒐集目的。 <br />&nbsp;&nbsp;&nbsp;&nbsp;（二）上述之相關業務或其他符合營業項目所定義之工作範圍。 </p>
+			<p class="message">二、  個人資料蒐集類別： <br/>&nbsp;&nbsp;&nbsp;&nbsp;（一）識別類（例如：中、英文姓名、國民身分證統一編號、識別碼、學生或員工證號、聯絡電話號碼、地址、性別、出生地、電子郵遞地址、帳戶號碼與戶名、其它識別證號或電子識別標章）、特徵類（例如：出生年月日、國籍、個人照片、筆跡與紙本文件）、社會情況類（例如：職業、學經歷）、財務細節類（例如：銀行帳號、戶名或與本蒐集目的相關之財務資訊）等。 </p>
+			<p class="message">三、  個人資料利用之期間、地區、對象及方式： <br/>&nbsp;&nbsp;&nbsp;&nbsp;（一）期間：利用期間為本單位或業務所必須之保存期間。<br/>&nbsp;&nbsp;&nbsp;&nbsp;（二）地區：您的個人資料將用於本單位提供服務之地區。<br/>&nbsp;&nbsp;&nbsp;&nbsp;（三）對象：本單位之共同行銷、交互運用客戶資料公司、合作推廣單位、業務往來機構、依法有調查權機關或金融監理機關。<br/>&nbsp;&nbsp;&nbsp;&nbsp;（四）方式：電子文件、紙本，或以自動化機器或其他非自動化之利用方式。 </p>
+			<p class="message">四、  依據個資法第三條規定，您就本單位保有您的個人資料得行使下列權利：<br />&nbsp;&nbsp;&nbsp;&nbsp;（一）查詢、閱覽、複本、補充、更正、請求停止蒐集、請求停止處理、請求停止利用、請求刪除等權利。</p>
+			<p class="message">The Declaration of Hacker保有修訂本告知內容之權利，修正時亦同，以上條文參考自中華民國資料保護協會。<br />公告日期: 2016-9-1 聯絡信箱:cfp@tdohacker.org</p>
 		</div>
 	</section>
 
@@ -1069,7 +1071,7 @@
 			<a href="http://tdohacker.org/" target="_blank"><img src="images/ic_blog.png" /></a>
 			<a href="https://www.facebook.com/tdohacker" target="_blank"><img src="images/ic_facebook.png" /></a>
 		</section>
-		<section class="copyright sfont">Copyright &copy; TDOHacker</section>
+		<section class="copyright sfont">Copyright &copy; TDOHACKER</section>
 	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
