--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 	<header>
 		<div class="navbar">
-			<h1 class="main-title"><a class="sfont" href="">TDOHacker</a></h1>
+			<h1 class="main-title"><a class="sfont" href="">TDOHACKER</a></h1>
 			<nav role="bugar-button" class="unactive">
 				<li role="bugar-top-bread"></li>
 				<li role="bugar-ham"></li>
@@ -864,7 +864,7 @@
 							<blockquote>手邊太多工具放在身上背包欄不夠用了嗎？那就快把工具分享出來吧！只要是資安相關之工具使用、拆解、分析、製作、改編等題目，無論軟體、作業系統、硬體、開發板、各種器材及其他資安相關之內容皆可。具體如「如何將 Kali Linux 改的更友善」、「拆解 SQLMap 程式碼並分析其攻擊模式」、「使用 OpenLTE 架設偽造基地台」等，都適合投稿在「工具類別」分類下。</blockquote>
 						</li>
 						<li>社群類別（30 分鐘）
-							<blockquote>快來向聽眾們宣傳您的社群吧！不管你是學生社團，或是新成立的社群，都十分歡迎投稿喔！還在猶豫什麼，趕緊整理一下最近的成果，跟大家分享吧！具體如：「TDOHacker學生資安社群」、「TDOH 2016 工商」皆在「社群類別」分類下。</blockquote>
+							<blockquote>快來向聽眾們宣傳您的社群吧！不管你是學生社團，或是新成立的社群，都十分歡迎投稿喔！還在猶豫什麼，趕緊整理一下最近的成果，跟大家分享吧！具體如：「TDOHACKER學生資安社群」、「TDOH 2016 工商」皆在「社群類別」分類下。</blockquote>
 						</li>
 						<li>傳承類別（30 或 50 分鐘）
 							<blockquote>你有經驗想要跟大家分享嗎？不論是技術上的經驗，亦或是活動經驗，甚至是法律經驗，都歡迎投稿跟大家分享喔。相信大家都可以從你的經驗學到東西，而你或許還可以找到有類似經驗的人，發現過去從來沒不知道的秘訣呢！具體如：「防毒軟體實作經驗談」、「第一次舉辦 CTF 經驗談」、「如何辦好大食團！」</blockquote>
