--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width， initial-scale=1">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>TDOH Conf 2016</title>
 	<meta name="keywords" content="TDOH,TDOH2016,TDOH Conf,The Declaration of Hacker Conference,研討會,社群,駭客,Hacker">
-	<meta name="description" content="TDOH Conf 2016， 12/17 逢甲大學人言大樓。">
+	<meta name="description" content="TDOH Conf 2016,12/17 逢甲大學人言大樓。">
 	<!--fb shareing-->
 	<meta property="og:title" content="2016 TDOH Conf">
-	<meta name="og:description" content="TDOH Conf 2016， 12/17 逢甲大學人言大樓。">
+	<meta name="og:description" content="TDOH Conf 2016,12/17 逢甲大學人言大樓。">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="">
 	<meta property="og:site_name" content="2016 TDOH Conf">
