--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
 			<h3>鑽石贊助</h3>
 			<div class="row">
 				<div class="box">
-					<a href="http://tdohacker.org/" target="_blank" title="TDOH"><img src="images/logo.png" /></a>
+					<!-- <a href="http://tdohacker.org/" target="_blank" title="TDOH"><img src="images/logo.png" /></a> -->
 				</div>
 				<div class="box"></div>
 			</div>
